unpackaged/main/default/objects/Lead/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <externalId>true</externalId>
    <label>ABN</label>
    <length>14</length>
    <type>Text</type>
</CustomField>