unpackaged/main/default/objects/Lead/fields/ACN__c.field-meta.xml
<CustomField>
    <fullName>ACN__c</fullName>
    <externalId>true</externalId>
    <label>ACN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>