unpackaged/main/default/objects/Lead/fields/Assign_by_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Assign_by_Post_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for Lead if it is assigned by Post Code</description>
    <label>Assign by Postcode?</label>
    <type>Checkbox</type>
</CustomField>