unpackaged/main/default/objects/Lead/fields/BCI_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>BCI_Firm_Id__c</fullName>
    <description>Account Number for leads imported from the BCI platform</description>
    <label>BCI Firm Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>