unpackaged/main/default/objects/Lead/fields/Business_Type_Old__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_Old__c</fullName>
    <description>Registered business entity type</description>
    <label>Business Type_Old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Entity_Type</valueSetName>
    </valueSet>
</CustomField>