unpackaged/main/default/objects/Lead/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <description>This is used to describe the Account, it will map to the Account &quot;Description&quot; field</description>
    <label>Company Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>