unpackaged/main/default/objects/Lead/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mitre 10</fullName>
            </value>
            <value>
                <fullName>Reeces</fullName>
            </value>
            <value>
                <fullName>Dulux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>