unpackaged/main/default/objects/Lead/fields/Enquiry_Description__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Description__c</fullName>
    <description>Custom Description field mapped to a Custom Opportunity Description field</description>
    <label>Enquiry Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>