unpackaged/main/default/objects/Lead/fields/GST_Number__c.field-meta.xml
<CustomField>
    <fullName>GST_Number__c</fullName>
    <externalId>true</externalId>
    <label>GST Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>