unpackaged/main/default/objects/Lead/fields/Home_Store__c.field-meta.xml
<CustomField>
    <fullName>Home_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the Lead&#39;s home store</description>
    <label>Home Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>