unpackaged/main/default/objects/Lead/fields/Is_Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Converted__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lead Converted?</label>
    <type>Checkbox</type>
</CustomField>