unpackaged/main/default/objects/Lead/fields/PLS_Builder_ID__c.field-meta.xml
<CustomField>
    <fullName>PLS_Builder_ID__c</fullName>
    <description>Used on lead conversion to match with Account PLS Builder ID</description>
    <label>PLS Builder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>