unpackaged/main/default/objects/Lead/fields/Potential_Value__c.field-meta.xml
<CustomField>
    <fullName>Potential_Value__c</fullName>
    <description>Maps to the Opportunity Amount</description>
    <label>Potential $ Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>