unpackaged/main/default/objects/Lead/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
                <isActive>false</isActive>
                <label>Cold</label>
            </value>
            <value>
                <fullName>Hot</fullName>
                <isActive>false</isActive>
                <label>Hot</label>
            </value>
            <value>
                <fullName>Warm</fullName>
                <isActive>false</isActive>
                <label>Warm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>