unpackaged/main/default/objects/Lead/fields/Project_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Project_Postcode__c</fullName>
    <description>The Postcode the Project site is located. This is used for Postcode/Suburb based Project Lead assignment</description>
    <label>Project Postcode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>