unpackaged/main/default/objects/Lead/fields/Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Role__c</fullName>
    <label>Project Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>