unpackaged/main/default/objects/Lead/fields/Project_Town__c.field-meta.xml
<CustomField>
    <fullName>Project_Town__c</fullName>
    <description>The Town/Suburb the Project is located in. used for Postcode based Project Lead assignment</description>
    <label>Project Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>