unpackaged/main/default/objects/Lead/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>Field used for prompting followups and reporting.</description>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>