unpackaged/main/default/objects/Lead/fields/Secondary_Segment__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The secondary segment of the contact</description>
    <label>Secondary Segment</label>
    <referenceTo>Segment__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>