unpackaged/main/default/objects/Lead/fields/Type_of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Enquiry__c</fullName>
    <label>Type of Enquiry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Whole of House</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Front of Wall</fullName>
            </value>
            <value>
                <fullName>Lightweight Construction</fullName>
            </value>
            <value>
                <fullName>Renovations</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Price Submission</fullName>
            </value>
            <value>
                <fullName>PS1</fullName>
            </value>
            <value>
                <fullName>Clever Living</fullName>
            </value>
            <value>
                <fullName>BTS</fullName>
            </value>
            <value>
                <fullName>Farm Sheds</fullName>
            </value>
            <value>
                <fullName>Organisations</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>