unpackaged/main/default/objects/Lead/fields/Umbrella_Group__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Umbrella Group</description>
    <label>Umbrella Group</label>
    <referenceTo>Umbrella_Group__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>