unpackaged/main/default/objects/Lead/recordTypes/AU_Standard_Lead.recordType-meta.xml
<RecordType>
    <fullName>AU_Standard_Lead</fullName>
    <active>true</active>
    <businessProcess>Standard Leads</businessProcess>
    <description>This is the Standard Lead record type for AUS.</description>
    <label>AU Standard Lead</label>
</RecordType>