unpackaged/main/default/objects/Lead/recordTypes/External_Project_Lead.recordType-meta.xml
<RecordType>
    <fullName>External_Project_Lead</fullName>
    <active>true</active>
    <businessProcess>Standard Leads</businessProcess>
    <description>This is the record type for capturing leads for from BCI and PLS</description>
    <label>External Project Lead</label>
</RecordType>