unpackaged/main/default/objects/Lead/recordTypes/NZ_Standard_Lead.recordType-meta.xml
<RecordType>
    <fullName>NZ_Standard_Lead</fullName>
    <active>true</active>
    <businessProcess>Standard Leads</businessProcess>
    <description>This is the Standard Lead record type for NZ.</description>
    <label>NZ Standard Lead</label>
</RecordType>