unpackaged/main/default/objects/Lead/recordTypes/Organisations_Lead.recordType-meta.xml
<RecordType>
    <fullName>Organisations_Lead</fullName>
    <active>true</active>
    <businessProcess>Organisation Leads</businessProcess>
    <description>This is the record type for Organisations.</description>
    <label>Organisations Lead</label>
</RecordType>