unpackaged/main/default/objects/Lead/validationRules/ABN_format_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ABN_format_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Country__c, &quot;Australia&quot;),
ABN__c !=null,
NOT (
	AND (
		LEN(TRIM( ABN__c )) == 14,
		MOD (
			(
				((VALUE(MID(TRIM(SUBSTITUTE( ABN__c , &quot; &quot;, &quot;&quot;)), 1, 1)) - 1 ) * 10) +
				(VALUE(MID(TRIM(SUBSTITUTE( ABN__c , &quot; &quot;, &quot;&quot;)), 2, 1)) * 1) +
				(VALUE(MID(TRIM(SUBSTITUTE( ABN__c , &quot; &quot;, &quot;&quot;)), 3, 1)) * 3) +
				(VALUE(MID(TRIM(SUBSTITUTE( ABN__c , &quot; &quot;, &quot;&quot;)), 4, 1)) * 5) +
				(VALUE(MID(TRIM(SUBSTITUTE( ABN__c , &quot; &quot;, &quot;&quot;)), 5, 1)) * 7) +
				(VALUE(MID(TRIM(SUBSTITUTE( ABN__c , &quot; &quot;, &quot;&quot;)), 6, 1)) * 9) +
				(VALUE(MID(TRIM(SUBSTITUTE( ABN__c , &quot; &quot;, &quot;&quot;)), 7, 1)) * 11) +
				(VALUE(MID(TRIM(SUBSTITUTE( ABN__c , &quot; &quot;, &quot;&quot;)), 8, 1)) * 13) +
				(VALUE(MID(TRIM(SUBSTITUTE( ABN__c , &quot; &quot;, &quot;&quot;)), 9, 1)) * 15) +
				(VALUE(MID(TRIM(SUBSTITUTE( ABN__c , &quot; &quot;, &quot;&quot;)), 10, 1)) * 17) +
				(VALUE(MID(TRIM(SUBSTITUTE( ABN__c , &quot; &quot;, &quot;&quot;)), 11, 1)) * 19)
			),89
		) == 0
	)
))</errorConditionFormula>
    <errorDisplayField>ABN__c</errorDisplayField>
    <errorMessage>Please enter a valid ABN. Search https://abr.business.gov.au/ to ensure you capture the correct information.</errorMessage>
</ValidationRule>