unpackaged/main/default/objects/Lead/validationRules/ACN_format_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ACN_format_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISPICKVAL(Country__c, &quot;Australia&quot;),
ACN__c!=null,
OR(
LEN(SUBSTITUTE(ACN__c, &quot; &quot;, &quot;&quot;)) &gt; 9,
NOT (
	AND (
		LEN(TRIM( ACN__c )) == 11,
		10 -
		MOD (
			(
				(VALUE(MID(TRIM(SUBSTITUTE( ACN__c , &quot; &quot;, &quot;&quot;)), 1, 1)) * 8) +
				(VALUE(MID(TRIM(SUBSTITUTE( ACN__c , &quot; &quot;, &quot;&quot;)), 2, 1)) * 7) +
				(VALUE(MID(TRIM(SUBSTITUTE( ACN__c , &quot; &quot;, &quot;&quot;)), 3, 1)) * 6) +
				(VALUE(MID(TRIM(SUBSTITUTE( ACN__c , &quot; &quot;, &quot;&quot;)), 4, 1)) * 5) +
				(VALUE(MID(TRIM(SUBSTITUTE( ACN__c , &quot; &quot;, &quot;&quot;)), 5, 1)) * 4) +
				(VALUE(MID(TRIM(SUBSTITUTE( ACN__c , &quot; &quot;, &quot;&quot;)), 6, 1)) * 3) +
				(VALUE(MID(TRIM(SUBSTITUTE( ACN__c , &quot; &quot;, &quot;&quot;)), 7, 1)) * 2) +
				(VALUE(MID(TRIM(SUBSTITUTE( ACN__c , &quot; &quot;, &quot;&quot;)), 8, 1)) * 1)
			),10
		) == VALUE(MID(TRIM(SUBSTITUTE( ACN__c , &quot; &quot;, &quot;&quot;)), 9, 1))
	)
)))</errorConditionFormula>
    <errorDisplayField>ACN__c</errorDisplayField>
    <errorMessage>Please enter a valid ACN. Search https://abr.business.gov.au/ to ensure you capture the correct information.</errorMessage>
</ValidationRule>