unpackaged/main/default/objects/Lead/validationRules/AU_Mobile_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>AU_Mobile_Length</fullName>
    <active>true</active>
    <description>CCRM-549 For Aus lead record types, the Mobile field can only be entered as a 10 digit number and begin with 04</description>
    <errorConditionFormula>IF(
Contains(Secondary_Segment__r.Name, &quot;Export&quot;), False,
IF(AND(
CONTAINS( $Label.Record_Types_AU_Lead , RecordType.DeveloperName),
!ISBLANK( MobilePhone ),
OR(
NOT(REGEX( MobilePhone , &quot;\\d{10}?&quot;)),
Left(MobilePhone, 2) &lt;&gt; &quot;04&quot;
)
), True,
False
))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>The Mobile field can only be entered as a 10 digit number that begins with 04</errorMessage>
</ValidationRule>