unpackaged/main/default/objects/Lead/validationRules/Data_Integrity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Integrity_Required</fullName>
    <active>true</active>
    <description>Leads must have either Phone, Mobile, or Email</description>
    <errorConditionFormula>AND(
ISBLANK( Phone ),ISBLANK( MobilePhone ),ISBLANK( Email )
)</errorConditionFormula>
    <errorMessage>Please capture one of the following fields: Phone, Mobile, or Email</errorMessage>
</ValidationRule>