unpackaged/main/default/objects/Lead/validationRules/Loss_Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason_Mandatory</fullName>
    <active>true</active>
    <description>When a Lead Status is Closed - Not Converted a Loss Reason and Comment must be entered.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status , &quot;Closed - Not Converted&quot;),
ISBLANK(TEXT( Loss_Reason__c)))</errorConditionFormula>
    <errorMessage>Please enter in a Loss Reason</errorMessage>
</ValidationRule>