unpackaged/main/default/objects/Lead/listViews/All_Unassigned_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>All_Unassigned_Leads_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>All Unassigned Leads</label>
    <queue>All_Unassigned_Leads</queue>
    <sharedTo>
        <group>Rightshore</group>
    </sharedTo>
</ListView>