unpackaged/main/default/objects/Lead/listViews/External_Project_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>External_Project_Lead_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.External_Project_Lead</value>
    </filters>
    <label>Project Queue</label>
    <sharedTo>
        <roleAndSubordinates>AU_National_Sales_Manager_Builders</roleAndSubordinates>
    </sharedTo>
</ListView>