unpackaged/main/default/objects/Lead/listViews/Front_of_Wall_Leads.listView-meta.xml
<ListView>
    <fullName>Front_of_Wall_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Front of Wall Leads</label>
    <queue>Front_of_Wall_Leads</queue>
    <sharedTo>
        <role>Builders_Service_VIC_FOW_BDM</role>
        <role>North_East_Victoria_BDM_FOW</role>
        <role>Volume_Builders_FOW_BDM</role>
    </sharedTo>
</ListView>