unpackaged/main/default/objects/Lead/listViews/Insurance_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Insurance_Lead_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Insurance Leads</label>
    <queue>Insurance_Leads</queue>
    <sharedTo>
        <role>AU_Insurance_Aged_Care_Manager</role>
        <role>AU_Insurance_Team</role>
        <role>AU_Insurance_Team_Leader</role>
    </sharedTo>
</ListView>