unpackaged/main/default/objects/Lead/listViews/My_Closed_Not_Converted.listView-meta.xml
<ListView>
    <fullName>My_Closed_Not_Converted</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>Priority__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Closed - Declined (Do not Contact),Closed - Not Converted</value>
    </filters>
    <label>My Closed - Not Converted</label>
</ListView>