unpackaged/main/default/objects/Lead/listViews/My_Overdue_Leads.listView-meta.xml
<ListView>
    <fullName>My_Overdue_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Priority__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Lead.Organisations_Lead</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open - Not Contacted</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>N_DAYS_AGO:5</value>
    </filters>
    <label>My Overdue - All Other Leads</label>
</ListView>