unpackaged/main/default/objects/Lead/listViews/NSW_ACT_Organisations_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>NSW_ACT_Organisations_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Organisations_Lead</value>
    </filters>
    <label>NSW/ACT Organisations Queue</label>
    <queue>NSW_ACT_Organisations_Queue</queue>
    <sharedTo>
        <roleAndSubordinates>AU_Head_of_Organisation_Solutions</roleAndSubordinates>
    </sharedTo>
</ListView>